# managing_views

./: .env  Cargo.toml  diesel.toml  docker-compose.yml  state.json
migrations/2024-10-14-180948_create_to_do_items/: up.sql
src/: database.rs  main.rs  processes.rs  schema.rs  state.rs
src/css/: base.css  main.css
src/javascript/: main.js
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/templates/: main.html
src/to_do/structs/: done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
