[package]
name = "managing_views"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
diesel = {version = "2.2.4", features = ["postgres"]}
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.128", default-features = false, features = ["alloc"]}
